--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "bcryptjs": "^2.4.3",
     "crypto": "^1.0.1",
     "graphql": "^15.5.3",
+    "graphql-tools": "^8.2.0",
     "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
