--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "naperg-server",
   "scripts": {
     "start-watch": "ts-node-dev --no-notify --respawn --transpile-only src/server",
-    "start": "ts-node src/server.ts",
+    "start": "nodemon src/server.ts",
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
@@ -17,8 +17,9 @@
   "devDependencies": {
     "@types/graphql": "14.5.0",
     "@types/node": "16.9.1",
-    "prisma": "^3.0.2",
-    "ts-node": "^10.2.1",
+    "nodemon": "^2.0.15",
+    "prisma": "^3.9.1",
+    "ts-node": "^10.5.0",
     "ts-node-dev": "1.1.8",
     "typescript": "^4.4.3"
   },
