--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
     "crypto": "^1.0.1",
     "graphql": "^15.5.3",
     "graphql-tools": "^8.2.0",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "rss-parser": "^3.12.0"
   },
   "devDependencies": {
     "@types/graphql": "14.5.0",
