--- a/server/package.json
+++ b/server/package.json
@@ -19,16 +19,19 @@
   },
   "devDependencies": {
     "@types/graphql": "14.5.0",
-    "@types/node": "16.9.1",
+    "@types/node": "^16.9.1",
     "prisma": "^3.9.1",
-    "ts-node": "^10.2.1",
+    "ts-node": "^10.5.0",
     "ts-node-dev": "1.1.8",
-    "typescript": "^4.4.3"
+    "typescript": "^4.5.5"
   },
   "prettier": {
     "singleQuote": true,
     "semi": false,
     "trailingComma": "all"
+  },
+  "prisma": {
+    "seed": "node --loader ts-node/esm prisma/seed.ts"
   },
   "engines": {
     "node": ">=10.0.0"
