--- a/server/package.json
+++ b/server/package.json
@@ -13,13 +13,15 @@
     "bcryptjs": "^2.4.3",
     "crypto": "^1.0.1",
     "graphql": "^15.5.3",
+    "graphql-request": "^4.0.0",
     "graphql-tools": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
+    "node-schedule": "^2.1.0",
     "rss-parser": "^3.12.0"
   },
   "devDependencies": {
     "@types/graphql": "14.5.0",
-    "@types/node": "^16.9.1",
+    "@types/node": "^16.11.24",
     "prisma": "^3.9.1",
     "ts-node": "^10.5.0",
     "ts-node-dev": "1.1.8",
