--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,10 @@
 {
   "name": "naperg-server",
   "scripts": {
-    "start-watch": "ts-node-dev --no-notify --respawn --transpile-only src/server",
+    "start:dev": "ts-node-dev --no-notify --respawn --transpile-only src/server",
     "start": "ts-node src/server.ts",
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node prisma/seed.ts",
+    "start:puller": "ts-node script/puller.ts"
   },
   "dependencies": {
     "@faker-js/faker": "^6.0.0-alpha.5",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@types/graphql": "14.5.0",
     "@types/node": "^16.11.24",
+    "@types/node-schedule": "^1.3.2",
     "prisma": "^3.9.1",
     "ts-node": "^10.5.0",
     "ts-node-dev": "1.1.8",
