--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,9 @@
     "rss-parser": "^3.12.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/graphql": "14.5.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^16.11.24",
     "@types/node-schedule": "^1.3.2",
     "prisma": "^3.9.1",
