--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "@prisma/client": "^3.0.2",
     "apollo-server": "^3.3.0",
     "apollo-server-errors": "^3.3.1",
+    "apollo-server-plugin-response-cache": "^3.5.1",
     "bcryptjs": "^2.4.3",
     "crypto": "^1.0.1",
     "graphql": "^15.5.3",
