--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "apollo-server-errors": "^3.3.1",
     "apollo-server-plugin-response-cache": "^3.5.1",
     "bcryptjs": "^2.4.3",
+    "cron": "^1.8.2",
     "crypto": "^1.0.1",
     "graphql": "^15.5.3",
     "graphql-request": "^4.0.0",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cron": "^1.7.3",
     "@types/graphql": "14.5.0",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^16.11.24",
